# hw-sign

./: .gitignore  .gitmodules  README.md  intel_odca_root.pem
hw-sign-android/: .gitignore  AndroidManifest.xml  build.gradle  settings.gradle.kts
hw-sign-android/app/: build.gradle.kts
hw-sign-android/app/src/androidTest/java/fan/ovo/hwsign/: ExampleInstrumentedTest.kt
hw-sign-android/app/src/main/: AndroidManifest.xml
hw-sign-android/app/src/main/java/fan/ovo/hwsign/: AuthService.kt  KeyManager.kt  MainActivity.kt
hw-sign-android/app/src/main/java/fan/ovo/hwsign/ui/theme/: Color.kt  Theme.kt  Type.kt
hw-sign-android/app/src/main/res/values/: strings.xml  themes.xml
hw-sign-android/app/src/test/java/fan/ovo/hwsign/: ExampleUnitTest.kt
hw-sign-android/gradle/: libs.versions.toml
hw-sign-android/gradle/wrapper/: gradle-wrapper.properties
hw-sign-android/src/main/java/com/example/hwsign/: MainActivity.java
hw-sign-android/src/main/res/layout/: activity_main.xml
hw-sign-apple/: Info.plist  README.md  main.swift
hw-sign-apple/hw-sign-apple/: App.swift  ContentView.swift  hw_sign_apple.entitlements
hw-sign-apple/hw-sign-apple.xcodeproj/: project.pbxproj
hw-sign-apple/hw-sign-apple/Services/: AuthService.swift  KeyManager.swift
hw-sign-browser/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
hw-sign-browser/src/: App.vue
hw-sign-browser/src/services/: authService.ts
hw-sign-go/: crypto_utils.go  go.mod  go.sum  handlers.go  main.go  main_test.go  tpm_activation.go  tpm_certify.go  tpm_roots.go  tpm_verify.go  types.go
hw-sign-ios/: Info.plist  main.swift
hw-sign-macos/: Info.plist  main.swift
hw-sign-test/: hw_sign_mock.py
hw-sign-win/: CMakeLists.txt  main.cpp  preload.cmake  test.cpp  test_rsa_ncrypt.cpp  vcpkg.json
hw-sign-win/app/: auth_service.cpp  auth_service.h  hardware_key.cpp  hardware_key.h  main_window.cpp  main_window.h  ncrypt_utils.cpp  ncrypt_utils.h  openssl_demo.cpp  openssl_demo.h
hw-sign-win/common/: base64.cpp  base64.h
hw-sign-win/test_client/: main.cpp  test_client.hpp  tpm_attestation.hpp  types.h  unified_crypto_helper.hpp
